--- a/debug/mentor2.ini
+++ b/debug/mentor2.ini
@@ -1,3 +1,3 @@
 [General]
-MainWindowState=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\x3\x13\0\0\x1|\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\x1\0\0\0\x2\0\0\0\x2\0\0\0\x16\0m\0\x61\0i\0n\0T\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\xe\0t\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\x1\x1c\xff\xff\xff\xff\0\0\0\0\0\0\0\0)
-MainWindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x3\"\0\0\x1\xfd\0\0\0\b\0\0\0\x1e\0\0\x3\x1a\0\0\x1\xf5\0\0\0\0\0\0)
+MainWindowState=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\x5V\0\0\x2p\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\x1\0\0\0\x2\0\0\0\x2\0\0\0\x16\0m\0\x61\0i\0n\0T\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\xe\0t\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\x1\x1c\xff\xff\xff\xff\0\0\0\0\0\0\0\0)
+MainWindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\xff\xff\xff\xf8\xff\xff\xff\xf8\0\0\x5]\0\0\x2\xe9\0\0\0M\0\0\0\x1e\0\0\x3\xec\0\0\x2\xd9\0\0\0\0\x2\0)
